# wellbin-downloader

./: .env.example  .envrc  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONFIG.md  DEVELOPMENT.md  README.md  convert_pdfs_to_markdown.py  interactive_scraper.py  migrate.py  pyproject.toml  wellbin_scrape_labs.py
.agents/skills/github-project-automation/: SKILL.md
.agents/skills/github-project-automation/templates/issue-templates/: documentation.yml
.agents/skills/github-project-automation/templates/pr-templates/: PULL_REQUEST_TEMPLATE.md
.claude/: settings.json  settings.local.json
.claude/agents/: wellbin-converter.md  wellbin-scraper.md
.cursor/: mcp.json
.cursor/rules/: python-uv-standards.mdc  runtime-standards.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  design_patterns_and_guidelines.md  onboarding_summary.md  project_overview.md  suggested_commands.md  system_specific_notes.md  task_completion_checklist.md
scripts/: typecheck.sh
tests/: __init__.py  conftest.py  test_cli.py  test_converter.py  test_dataclasses.py  test_formatting.py  test_integration.py  test_logging.py  test_output.py  test_scraper.py  test_utils.py
tests/e2e/: test_integration.py
tests/fixtures/: README.md  medical_fixtures.py
tests/fixtures/medical_data/imaging_reports/: 20190815-imaging-1.md  20240318-imaging-0.md
tests/fixtures/medical_data/lab_reports/: 20180425-lab-1.md  20230615-lab-0.md
tests/integration/: test_cli.py  test_converter.py  test_scraper.py
tests/unit/: test_convert_command.py  test_converter_unit.py  test_dataclasses.py  test_date_parser.py  test_download_manager.py  test_exceptions.py  test_formatting.py  test_logging.py  test_scrape_command.py  test_utils.py
wellbin/: __init__.py  cli.py
wellbin/commands/: __init__.py  config.py  convert.py  scrape.py
wellbin/core/: __init__.py  converter.py  date_parser.py  download_manager.py  exceptions.py  logging.py  output.py  scraper.py  utils.py
