[project]
name = "wellbin-scraper"
version = "0.1.0"
description = "A web scraper for Wellbin medical data platform"
authors = [{name = "User", email = "feniix@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "lxml>=4.9.0",
    "python-dotenv>=1.0.0",
    "pymupdf4llm>=0.0.5",
    "click>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
]

[tool.uv]
dev-dependencies = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "bandit>=1.7.4",
    "safety>=2.3.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["wellbin-scraper"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "F811"]
exclude = [".venv", "__pycache__", ".git", "build", "dist"]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
]
