[project]
name = "wellbin-downloader"
version = "0.1.0"
description = "A comprehensive tool for downloading and processing medical data from the Wellbin platform"
authors = [{name = "feniix", email = "feniix@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "lxml>=4.9.0",
    "python-dotenv>=1.0.0",
    "pymupdf4llm>=0.0.5",
    "click>=8.0.0",
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["medical", "downloader", "wellbin", "pdf", "markdown", "healthcare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
wellbin = "wellbin.cli:main"

[project.urls]
Homepage = "https://github.com/feniix/wellbin-downloader"
Repository = "https://github.com/feniix/wellbin-downloader"
Issues = "https://github.com/feniix/wellbin-downloader/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wellbin"]

[tool.uv]
dev-dependencies = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "bandit>=1.7.4",
    "safety>=2.3.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["wellbin"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "F811"]
exclude = [".venv", "__pycache__", ".git", "build", "dist"]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
]
