[project]
name = "wellbin-downloader"
version = "0.1.0"
description = "A comprehensive tool for downloading and processing medical data from the Wellbin platform"
authors = [{name = "feniix", email = "feniix@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "lxml>=4.9.0",
    "python-dotenv>=1.0.0",
    "pymupdf4llm>=0.0.5",
    "click>=8.0.0",
    "types-requests>=2.32.0.20250602",
    "tenacity>=8.2.0",
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["medical", "downloader", "wellbin", "pdf", "markdown", "healthcare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
wellbin = "wellbin.cli:main"

[project.urls]
Homepage = "https://github.com/feniix/wellbin-downloader"
Repository = "https://github.com/feniix/wellbin-downloader"
Issues = "https://github.com/feniix/wellbin-downloader/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wellbin"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "F811",  # redefinition of unused name
]

[tool.ruff.lint.isort]
known-first-party = ["wellbin"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=wellbin",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=30"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (using real medical data)",
    "unit: marks tests as unit tests"
]

[tool.pyright]
include = ["wellbin"]
exclude = [
    "**/__pycache__",
    ".venv",
    "build",
    "dist",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportImportCycles = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportTypedDictNotRequiredAccess = false
reportPrivateUsage = false
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportUntypedFunctionDecorator = false
reportUnknownParameterType = true
reportUnknownArgumentType = false
reportUnknownLambdaType = true
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingParameterType = true
reportMissingTypeArgument = true
reportInvalidTypeVarUse = true
reportCallInDefaultInitializer = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportAssertAlwaysTrue = true
reportSelfClsParameterName = true
reportImplicitStringConcatenation = false
reportUndefinedVariable = true
reportUnboundVariable = true
reportInvalidStubStatement = true
reportIncompleteStub = true
reportUnsupportedDunderAll = true
reportUnusedCoroutine = true
reportFunctionMemberAccess = true
reportGeneralTypeIssues = true
reportPropertyTypeMismatch = true
reportWildcardImportFromLibrary = true
reportAbstractUsage = true
reportArgumentType = true
reportAssignmentType = true
reportAttributeAccessIssue = true
reportCallIssue = true
reportInconsistentConstructor = true
reportIndexIssue = true
reportInvalidTypeArguments = true
reportOperatorIssue = true
reportRedeclaration = true
reportReturnType = true
reportTypeCommentUsage = true
reportUnreachable = true
reportUnusedExpression = true
reportUnnecessaryTypeIgnoreComment = false
reportMatchNotExhaustive = true

[dependency-groups]
dev = [
    "bandit>=1.7.4",
    "pre-commit>=3.5.0",
    "pyright>=1.1.400",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "radon>=6.0.1",
    "ruff>=0.8.0",
    "safety>=2.3.0",
]
